Fix shared element transition bug
1)Comment all other transitions for now
2)Ensure unique transition names

Known Issues: The transtion does not work properly on empire state building image

--- a/XYZReader/src/main/res/values-v21/styles.xml
+++ b/XYZReader/src/main/res/values-v21/styles.xml
@@ -5,11 +5,12 @@
         <item name="android:colorPrimary">@color/colorPrimary</item>
         <item name="android:colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="android:colorAccent">@color/colorAccent</item>
-        <item name="android:windowExitTransition">@transition/grid_exit</item>
         <item name="android:windowContentTransitions">true</item>
     </style>
 
-    <style name="Theme.Bacon.Detail">
+    <style name="Theme.Bacon.Detail" parent="Theme.Bacon">
         <item name="android:statusBarColor">@android:color/transparent</item>
+        <item name="android:windowContentTransitions">true</item><!--
+        <item name="android:windowEnterTransition">@transition/slide_in</item>-->
     </style>
 </resources>
