--- a/XYZReader/src/main/res/values-land/macro_layout.xml
+++ b/XYZReader/src/main/res/values-land/macro_layout.xml
@@ -1,5 +1,7 @@
 <resources>
     <!-- detail -->
     <dimen name="detail_photo_height">224dp</dimen>
-    <dimen name="detail_inner_horiz_margin">112dp</dimen>
+    <dimen name="detail_inner_horiz_margin">52dp</dimen>
+    <bool name="need_title_background">true</bool>
+    <dimen name="detail_metabar_vert_padding">16dp</dimen>
 </resources>
