Change Share to FAB as per rubric specifications

--- a/XYZReader/src/main/res/layout/activity_article_detail.xml
+++ b/XYZReader/src/main/res/layout/activity_article_detail.xml
@@ -22,7 +22,7 @@
             android:contentDescription="@string/up"
             android:src="@drawable/ic_arrow_back" />
 
-        <ImageButton android:id="@+id/share_fab"
+       <!-- <ImageButton android:id="@+id/share_fab"
             android:stateListAnimator="@anim/fab_state_list_anim"
             android:background="@drawable/white_selectable_item_background_circle"
             android:layout_gravity="right|end"
@@ -32,5 +32,5 @@
             android:src="@drawable/ic_share"
             android:elevation="@dimen/fab_elevation"
             android:contentDescription="@string/action_share" />
-    </FrameLayout>
+-->    </FrameLayout>
 </FrameLayout>
