--- a/XYZReader/src/main/res/layout-land/fragment_article_detail.xml
+++ b/XYZReader/src/main/res/layout-land/fragment_article_detail.xml
@@ -37,6 +37,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="#8fff" />
+
     </LinearLayout>
 <LinearLayout
     android:layout_width="match_parent"
@@ -63,6 +64,7 @@
             android:background="@drawable/photo_background_protection" />
 
     </FrameLayout>
+
     <com.example.xyzreader.ui.ObservableScrollView
         android:id="@+id/scrollview"
         android:layout_width="match_parent"
@@ -71,5 +73,18 @@
             <include layout="@layout/article_body_layout"/>
     </com.example.xyzreader.ui.ObservableScrollView>
 </LinearLayout>
+
     </LinearLayout>
+
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/share_fab"
+        android:layout_gravity="right|end"
+        android:layout_marginTop="@dimen/fab_top_margin"
+        android:layout_marginRight="@dimen/fab_margin_right"
+        android:layout_width="@dimen/fab_size"
+        android:layout_height="@dimen/fab_size"
+        android:src="@drawable/ic_share"
+        android:elevation="@dimen/fab_elevation"
+        android:contentDescription="@string/action_share"/>
 </com.example.xyzreader.ui.DrawInsetsFrameLayout>
