--- a/XYZReader/src/main/res/values-land/dimens.xml
+++ b/XYZReader/src/main/res/values-land/dimens.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <dimen name="detail_meta_bar_land_height">100dp</dimen>
+    <dimen name="fab_top_margin">72dp</dimen>
 </resources>
