--- a/XYZReader/src/main/res/layout-land/fragment_article_detail.xml
+++ b/XYZReader/src/main/res/layout-land/fragment_article_detail.xml
@@ -2,6 +2,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/draw_insets_frame_layout"
+    xmlns:fab="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
     <LinearLayout
@@ -81,6 +82,7 @@
         android:id="@+id/share_fab"
         android:layout_gravity="right|end"
         android:layout_marginTop="@dimen/fab_top_margin"
+        fab:backgroundTint="@color/colorAccent"
         android:layout_marginRight="@dimen/fab_margin_right"
         android:layout_width="@dimen/fab_size"
         android:layout_height="@dimen/fab_size"
